// Version: 2026-03-09 (Post-Migration 02)

// --- Hệ thống Địa điểm (Location System) ---

Table floor {
  id bigint [pk, increment]
  created_at datetime(6) [default: NULL]
  created_by varchar(256) [default: NULL]
  updated_at datetime(6) [default: NULL]
  updated_by varchar(256) [default: NULL]
  v bigint [not null]
  code varchar(256) [unique, not null]
  level int [default: NULL]
}

Table floor_lan {
  id bigint [pk, increment]
  created_at datetime(6) [default: NULL]
  created_by varchar(256) [default: NULL]
  updated_at datetime(6) [default: NULL]
  updated_by varchar(256) [default: NULL]
  v bigint [not null]
  description text
  lang_code varchar(10) [not null]
  name varchar(256) [not null]
  owner_id bigint [not null]

  Indexes {
    (owner_id, lang_code) [unique, name: "idx_floor_lan_owner_id_lang_code"]
  }
}

Table room {
  id bigint [pk, increment]
  created_at datetime(6) [default: NULL]
  created_by varchar(256) [default: NULL]
  updated_at datetime(6) [default: NULL]
  updated_by varchar(256) [default: NULL]
  v bigint [not null]
  code varchar(256) [unique, not null]
  floor_id bigint [not null]

  Indexes {
    floor_id [name: "idx_room_floor_id"]
  }
}

Table room_lan {
  id bigint [pk, increment]
  description text
  lang_code varchar(10) [not null]
  name varchar(256) [not null]
  owner_id bigint [not null]

  Indexes {
    (owner_id, lang_code) [unique, name: "idx_room_lan_owner_id_lang_code"]
  }
}

// --- Quản lý Thiết bị (Device Management) ---

Table device_control {
  id bigint [pk, increment]
  created_at datetime(6) [default: NULL]
  created_by varchar(256) [default: NULL]
  updated_at datetime(6) [default: NULL]
  updated_by varchar(256) [default: NULL]
  v bigint [not null]
  api_endpoint varchar(256) [default: NULL]
  ble_mac_address varchar(100) [default: NULL]
  device_control_type varchar(256) [not null]
  gpio_pin int [not null]
  client_id bigint [not null]
  room_id bigint [not null]

  Indexes {
    client_id [name: "idx_device_control_client_id"] // Added in Migration 02
    room_id [name: "idx_device_control_room_id"]
    // idx_device_control_client_gpio_ble removed in Migration 02
  }
}

Table air_condition {
  id bigint [pk, increment]
  is_active bit(1) [not null]
  natural_id varchar(256) [unique, not null]
  fan_speed int [default: NULL]
  mode varchar(256) [default: NULL]
  power varchar(256) [default: NULL]
  swing varchar(256) [default: NULL]
  temperature int [default: NULL]
  device_control_id bigint [unique, default: NULL]
  room_id bigint [not null]

  Indexes {
    room_id [name: "idx_air_condition_room_id"]
  }
}

Table air_condition_lan {
  id bigint [pk, increment]
  lang_code varchar(10) [not null]
  name varchar(256) [not null]
  owner_id bigint [not null]

  Indexes {
    (owner_id, lang_code) [unique]
  }
}

Table fan {
  id bigint [pk, increment]
  is_active bit(1) [not null]
  natural_id varchar(256) [unique, not null]
  power varchar(256) [default: NULL]
  type varchar(256) [not null]
  speed int [default: NULL]
  mode varchar(256) [default: NULL]
  light varchar(256) [default: NULL]
  swing varchar(256) [default: NULL]
  device_control_id bigint [unique, default: NULL]
  room_id bigint [not null]
}

Table fan_lan {
  id bigint [pk, increment]
  lang_code varchar(10) [not null]
  name varchar(256) [not null]
  owner_id bigint [not null]
  Indexes { (owner_id, lang_code) [unique] }
}

Table light {
  id bigint [pk, increment]
  is_active bit(1) [not null]
  natural_id varchar(256) [unique, not null]
  power varchar(256) [default: NULL]
  level int [default: NULL]
  device_control_id bigint [unique, default: NULL]
  room_id bigint [not null]
}

Table light_lan {
  id bigint [pk, increment]
  lang_code varchar(10) [not null]
  name varchar(256) [not null]
  owner_id bigint [not null]
  Indexes { (owner_id, lang_code) [unique] }
}

// --- Cảm biến và Dữ liệu (Sensors & Data) ---

Table temperature {
  id bigint [pk, increment]
  is_active bit(1) [not null]
  natural_id varchar(256) [unique, not null]
  current_value double [default: NULL]
  device_control_id bigint [unique, default: NULL]
  room_id bigint [not null]
}

Table temperature_value {
  id bigint [pk, increment]
  timestamp datetime(6) [not null]
  temp_c double [default: NULL]
  sensor_id bigint [not null]

  Indexes {
    (sensor_id, timestamp) [name: "idx_sensor_timestamp"]
    timestamp [name: "idx_timestamp"]
  }
}

Table power_consumption {
  id bigint [pk, increment]
  is_active bit(1) [not null]
  natural_id varchar(256) [unique, not null]
  current_watt double [default: NULL]
  device_control_id bigint [unique, default: NULL]
  room_id bigint [not null]
}

Table power_consumption_value {
  id bigint [pk, increment]
  timestamp datetime(6) [not null]
  watt double [default: NULL]
  sensor_id bigint [not null]

  Indexes {
    (sensor_id, timestamp) [name: "idx_sensor_timestamp"]
    timestamp [name: "idx_timestamp"]
  }
}

// --- Tự động hóa và Luật (Automation & Rules) ---

Table automation {
  id bigint [pk, increment]
  cron_expression varchar(256) [not null]
  is_active bit(1) [default: NULL]
  name varchar(256) [not null]
  Indexes { is_active [name: "idx_auto_status"] }
}

Table automation_action {
  id bigint [pk, increment]
  action_type varchar(256) [not null]
  execution_order int [default: NULL]
  parameter_value varchar(256) [default: NULL]
  target_id bigint [not null]
  target_type varchar(256) [default: NULL]
  automation_id bigint [not null]
}

Table rule {
  id bigint [pk, increment]
  name varchar(256) [not null]
  priority int [not null]
  is_active bit(1) [not null, default: `1`]
  room_id bigint [not null]
  target_device_id bigint [not null]
  target_device_category varchar(256) [not null, note: 'AIR_CONDITION, LIGHT']
  action_params text [default: NULL]
}

Table rule_condition {
  id bigint [pk, increment]
  rule_id bigint [not null]
  sort_order int [not null]
  data_source varchar(256) [not null, note: 'SYSTEM, ROOM, DEVICE, SENSOR']
  resource_param text [note: 'JSON storage']
  operator varchar(5) [not null]
  value_param varchar(256) [not null]
  next_logic varchar(3) [default: NULL]
}

Table rule_v2 {
  id bigint [pk, increment]
  created_at datetime(6) [default: NULL]
  created_by varchar(256) [default: NULL]
  updated_at datetime(6) [default: NULL]
  updated_by varchar(256) [default: NULL]
  v bigint [not null]
  name varchar(256) [not null]
  priority int [not null]
  is_active bit(1) [not null, default: `1`]
  room_id bigint [not null]
  cron_expression varchar(256) [default: NULL]

  Indexes {
    room_id [name: "idx_rule_v2_room"]
    is_active [name: "idx_rule_v2_status"]
  }
}

Table rule_condition_v2 {
  id bigint [pk, increment]
  created_at datetime(6) [default: NULL]
  created_by varchar(256) [default: NULL]
  updated_at datetime(6) [default: NULL]
  updated_by varchar(256) [default: NULL]
  v bigint [not null]
  rule_v2_id bigint [not null]
  sort_order int [not null]
  data_source varchar(256) [not null, note: 'SYSTEM, ROOM, DEVICE, SENSOR']
  resource_param text [note: 'JSON storage']
  operator varchar(5) [not null]
  value_param varchar(256) [not null]
  next_logic varchar(3) [default: NULL]

  Indexes {
    rule_v2_id [name: "idx_rule_condition_v2_rule_id"]
  }
}

Table rule_action_v2 {
  id bigint [pk, increment]
  created_at datetime(6) [default: NULL]
  created_by varchar(256) [default: NULL]
  updated_at datetime(6) [default: NULL]
  updated_by varchar(256) [default: NULL]
  v bigint [not null]
  rule_v2_id bigint [not null]
  execution_order int [default: NULL]
  target_device_id bigint [not null]
  target_device_category varchar(256) [not null, note: 'AIR_CONDITION, LIGHT, FAN']
  action_params text [default: NULL]

  Indexes {
    rule_v2_id [name: "idx_rule_action_v2_rule_id"]
    target_device_id [name: "idx_rule_action_v2_target_device"]
  }
}

// --- Người dùng và Bảo mật (Users & Security) ---

Table client {
  id bigint [pk, increment]
  client_type varchar(256) [default: NULL]
  ip_address varchar(45) [default: NULL]
  mac_address varchar(100) [default: NULL]
  username varchar(100) [unique, not null]
  password_hash varchar(256) [default: NULL]

  Indexes {
    (client_type, ip_address) [unique, name: "idx_client_type_ip_address"]
  }
}

Table sys_group {
  id bigint [pk, increment]
  group_code varchar(100) [unique, not null]
}

Table client_group {
  client_id bigint [not null]
  group_id bigint [not null]
  PRIMARY KEY (client_id, group_id)
}

Table sys_function {
  id bigint [pk, increment]
  function_code varchar(256) [unique, not null]
}

Table sys_role {
  id bigint [pk, increment]
  function_id bigint [not null]
  group_id bigint [not null]
  Indexes { (group_id, function_id) [unique] }
}

Table persistent_logins {
  series varchar(64) [pk]
  last_used datetime(6) [not null]
  token varchar(64) [not null]
  username varchar(64) [not null]
}

Table language {
  id bigint [pk, increment]
  code varchar(10) [unique, not null]
  name varchar(100) [not null]
}

// --- Quartz Scheduler (System Tables) ---

Table QRTZ_TRIGGERS {
  SCHED_NAME varchar(120) [not null]
  TRIGGER_NAME varchar(200) [not null]
  TRIGGER_GROUP varchar(200) [not null]
  JOB_NAME varchar(200) [not null]
  JOB_GROUP varchar(200) [not null]
  PRIMARY KEY (SCHED_NAME, TRIGGER_NAME, TRIGGER_GROUP)
}

Table QRTZ_JOB_DETAILS {
  SCHED_NAME varchar(120) [not null]
  JOB_NAME varchar(200) [not null]
  JOB_GROUP varchar(200) [not null]
  PRIMARY KEY (SCHED_NAME, JOB_NAME, JOB_GROUP)
}

// --- Relationships (Foreign Keys) ---

Ref: floor_lan.owner_id > floor.id
Ref: room.floor_id > floor.id
Ref: room_lan.owner_id > room.id
Ref: device_control.client_id > client.id
Ref: device_control.room_id > room.id

Ref: air_condition.device_control_id - device_control.id
Ref: air_condition.room_id > room.id
Ref: air_condition_lan.owner_id > air_condition.id

Ref: fan.device_control_id - device_control.id
Ref: fan.room_id > room.id
Ref: fan_lan.owner_id > fan.id

Ref: light.device_control_id - device_control.id
Ref: light.room_id > room.id
Ref: light_lan.owner_id > light.id

Ref: temperature.device_control_id - device_control.id
Ref: temperature.room_id > room.id
Ref: temperature_value.sensor_id > temperature.id

Ref: power_consumption.device_control_id - device_control.id
Ref: power_consumption.room_id > room.id
Ref: power_consumption_value.sensor_id > power_consumption.id

Ref: automation_action.automation_id > automation.id
Ref: rule.room_id > room.id
Ref: rule_condition.rule_id > rule.id

Ref: rule_v2.room_id > room.id
Ref: rule_condition_v2.rule_v2_id > rule_v2.id
Ref: rule_action_v2.rule_v2_id > rule_v2.id

Ref: client_group.client_id > client.id
Ref: client_group.group_id > sys_group.id
Ref: sys_role.group_id > sys_group.id
Ref: sys_role.function_id > sys_function.id

Ref: QRTZ_TRIGGERS.(SCHED_NAME, JOB_NAME, JOB_GROUP) > QRTZ_JOB_DETAILS.(SCHED_NAME, JOB_NAME, JOB_GROUP)